Fix languages for API

--- a/lib/bing/ads/api/v11/config/languages.yml
+++ b/lib/bing/ads/api/v11/config/languages.yml
@@ -1,12 +1,12 @@
-danish: 'DA'
-dutch: 'NL'
-english: 'EN'
-finnish: 'FI'
-french: 'FR'
-german: 'DE'
-italian: 'IT'
-norwegian: 'NO'
-portuguese: 'PT'
-spanish: 'ES'
-swedish: 'SV'
-traditional_chinese: 'ZH'
+danish: 'Danish'
+dutch: 'Dutch'
+english: 'English'
+finnish: 'Finnish'
+french: 'French'
+german: 'German'
+italian: 'Italian'
+norwegian: 'Norwegian'
+portuguese: 'Portuguese'
+spanish: 'Spanish'
+swedish: 'Swedish'
+traditional_chinese: 'TraditionalChinese'
