--- a/lib/bing/ads/api/v11/constants/campaign_management.yml
+++ b/lib/bing/ads/api/v11/constants/campaign_management.yml
@@ -37,8 +37,12 @@ bidding_model:
   keyword: Keyword
   site_placement: SitePlacement
 bidding_scheme:
-  inherit_from_parent: InheritFromParentBiddingScheme
   manual_cpc: ManualCpcBiddingScheme
+  enhanced_cpc: EnhancedCpcBiddingScheme
+  inherit_from_parent: InheritFromParentBiddingScheme
+  max_clicks: MaxClicksBiddingScheme
+  max_conversions: MaxConversionsBiddingScheme
+  target_cpa: TargetCpaBiddingScheme
 budget_limit_type:
   daily_budget_accelerated: DailyBudgetAccelerated
   daily_budget_standard: DailyBudgetStandard
