Bing API v13 upgrade

--- a/lib/bing/ads/api/v13/constants/time_zones.yml
+++ b/lib/bing/ads/api/v13/constants/time_zones.yml
@@ -1,7 +1,7 @@
 abu_dhabi_muscat: 'AbuDhabiMuscat'
 adelaide: 'Adelaide'
 alaska: 'Alaska'
-almaty_novosibirsk: 'Almaty_Novosibirsk'
+almaty_novosibirsk: 'AlmatyNovosibirsk'
 amsterdam_berlin_bern_rome_stockholm_vienna: 'AmsterdamBerlinBernRomeStockholmVienna'
 arizona: 'Arizona'
 astana_dhaka: 'AstanaDhaka'
@@ -51,11 +51,11 @@ kathmandu: 'Kathmandu'
 krasnoyarsk: 'Krasnoyarsk'
 kuala_lumpur_singapore: 'KualaLumpurSingapore'
 kuwait_riyadh: 'KuwaitRiyadh'
-magadan_solomon_island_new_caledonia: 'MagadanSolomonIslandNewCaledonia'
+solomon_island_new_caledonia: 'SolomonIslandNewCaledonia'
 mid_atlantic: 'MidAtlantic'
-midway_islandand_samoa: 'MidwayIslandand_Samoa'
+midway_islandand_samoa: 'MidwayIslandAndSamoa'
 moscow_st_petersburg_volgograd: 'MoscowStPetersburgVolgograd'
-mountain_time_u_s_canada: 'MountainTime_US_Canada'
+mountain_time_u_s_canada: 'MountainTimeUSCanada'
 nairobi: 'Nairobi'
 newfoundland: 'Newfoundland'
 nukualofa: 'Nukualofa'
